fixed mobile overflow

--- a/client/src/app/index.scss
+++ b/client/src/app/index.scss
@@ -280,7 +280,7 @@ form.form-container {
   float: left;
   height: 100%;
   width: 20%;
-  border: .8px solid grey;
+  border: .8px solid black;
 }
 
 .playlist-content {
@@ -399,12 +399,13 @@ div.table-container {
 }
 
 table.songs-table {
+  color: black;
   width: 100%;
   th {
     text-align: center;
   }
   tr {
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid black;
   }
   th, td {
     padding: 10px;
@@ -769,6 +770,10 @@ div#nav-menu-details-black {
 }
 
 @media only screen and (max-width: 438px) {
+
+  div.bubble-wrap, div.bubble-wrap {
+    overflow-y: auto;
+  }
   div.landing-text-block {
     width: 100%;
     height: 400px;
